--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
+*:not(.fa) {
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+}
+.section-name{
+    color: rgb(18,18,18);
+    line-height: calc(1 + .3 / max(1, var(1.0)));
+    word-break: break-word;
+    h2{
+        font-size: calc(var(1.0)* 2.4rem);
+    
+    }
+}
+.view-all-btn {
+    display: inline-block;
+    padding: 10px 30px;
+    background-color: #68b6e7;
+    color: white;
+    text-transform: capitalize;
+    text-decoration: none;
+    cursor: pointer;
+    border: none;
+    border-radius: 0;
+    width: fit-content;
+    text-decoration: none;
+    // padding: 10px 30px;
+}
+.view-all-btn:hover{
+    display: inline-block;
+    padding: 10px 30px;
+    background-color: #68b6e7;
+    color: white;
+    text-transform: capitalize;
+    text-decoration: none;
+    cursor: pointer;
+    border: none;
+    border-radius: 0;
+    width: fit-content;
+    text-decoration: none;
+}
